--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     document.getElementById('year').innerText = new Date().getFullYear();
 
     (function(){
-        emaijs.init("hpNvKlI6pZ9btYQpH");
+        emailjs.init("hpNvKlI6pZ9btYQpH");
     })();
     
     document.getElementById("contact-form").addEventListener("submit", function(e){
