Fix script source URL for emailjs-com

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div>Made by <strong>Sibiya Xolile Ziyanda</strong> — © <span id="year"></span></div>
     </footer>
   </div>
-    <script src="https://cdnjsdeliver.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     // small interactive behaviour
     document.getElementById('year').innerText = new Date().getFullYear();
